Update Bootstrap to v4 beta 2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <!-- the website uses Twitter Bootstrap. Check out their documentation to learn about the
              available components and elements here https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha256-m/h/cUDAhf6/iBRixTbuc8+Rg2cIETQtPcH9D3p2Kg0=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha256-QUyqZrt5vIjBumoqQV0jM8CgGqscFfdGhN+nVCqX0vc=" crossorigin="anonymous" />
         <link rel="stylesheet" href="style.css"/>
     </head>
 
@@ -85,8 +85,8 @@
             <div class="container">
                 <h1>Pricing</h1>
                 <p>Pricing options include photo editing</p>
-                <div class="pricing-container">
-                    <div class="pricing-tier">
+                <div class="row">
+                    <div class="offset-md-3 col-md-4 pricing-tier">
                         <span class="name">Enthusiast</span>
                         <span class="cost">23$</span>
                         <ul class="features">
@@ -95,7 +95,7 @@
                             <li>Feature 3</li>
                         </ul>
                     </div>
-                    <div class="pricing-tier">
+                    <div class="col-md-4 pricing-tier">
                         <span class="name">Professional</span>
                         <span class="cost">35$</span>
                         <ul class="features">
@@ -186,7 +186,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/12.1.5/js/smooth-scroll.min.js"       integrity="sha256-MMt0/21G3z0Zg4ET1kI3HC9npItDowkitRDVr0FhCxA=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"                 integrity="sha256-/GXjBGBWRx8/y1Be190w3hrUOFXNs9qPhthi0tbNnG8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"                      integrity="sha256-gL1ibrbVcRIHKlCO5OXOPC/lZz/gpdApgQAzskqqXp8=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"   integrity="sha256-DiWJXXyq81WlPRnDfGmgYZj2aOVCKyEdJ1l+2TmDuAs=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha256-DiWJXXyq81WlPRnDfGmgYZj2aOVCKyEdJ1l+2TmDuAs=" crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </body>
 </html>
