Make footer right-justified

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         </section>
                 
         <footer class="footer">
-            <div class="container">
-                <span class="text-muted">Copyright &copy; 2017 by Picme. All Rights Reserved.</span>
+            <div class="container text-right">
+                <span class="text-muted">Copyright &copy; 2017 Picme. All Rights Reserved.</span>
             </div>
         </footer>
 
