--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 
         <!-- the website uses Twitter Bootstrap. Check out their documentation to learn about the
              available components and elements here https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha256-m/h/cUDAhf6/iBRixTbuc8+Rg2cIETQtPcH9D3p2Kg0=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha256-QUyqZrt5vIjBumoqQV0jM8CgGqscFfdGhN+nVCqX0vc=" crossorigin="anonymous" />
         <link rel="stylesheet" href="style.css"/>
     </head>
 
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <body data-spy="scroll" data-target="#navbar">
+        <nav id="site-navigation" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top navbar-animated nav-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.svg" width="120" height="30"/>
+                    <img src="img/logo.svg"/>
                 </a>
 
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav mr-auto">
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#home">Home</a>
                         </li>
@@ -57,24 +57,25 @@
                 </div>
             </div>
         </section>
-        
+
         <section id="features">
             <div class="container">
                 <h1>Features</h1>
+                <p>Picme is a service that allows people to get in contact with a photographer near their area for a quick photoshoot.</p>
                 <div class="row">
                     <div class="feature col-md-4">
                         <div class="icon"><img src="img/camera-retro.svg"/></div>
-                        <p>PicMe is a service that allows people to get in contact with a photographer near their area for a quick photoshoot. Customers have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
+                        <p>You have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
                     </div>
 
                     <div class="feature col-md-4">
                         <div class="icon"><img src="img/mobile-alt.svg"/></div>
-                        <p>With the mobile app, the user can locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
+                        <p>Using the mobile app, you locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
                     </div>
 
                     <div class="feature col-md-4">
                         <div class="icon"><img src="img/paper-plane.svg"/></div>
-                        <p>After the shoot, the photographer sends the pictures to the customers through the PicMe app.<p>
+                        <p>After the shoot, the photographer sends you the pictures through the Picme app.<p>
                     </div>
                 </div>
             </div>
@@ -84,8 +85,8 @@
             <div class="container">
                 <h1>Pricing</h1>
                 <p>Pricing options include photo editing</p>
-                <div class="pricing-container">
-                    <div class="pricing-tier">
+                <div class="row">
+                    <div class="offset-md-3 col-md-4 pricing-tier">
                         <span class="name">Enthusiast</span>
                         <span class="cost">23$</span>
                         <ul class="features">
@@ -94,7 +95,7 @@
                             <li>Feature 3</li>
                         </ul>
                     </div>
-                    <div class="pricing-tier">
+                    <div class="col-md-4 pricing-tier">
                         <span class="name">Professional</span>
                         <span class="cost">35$</span>
                         <ul class="features">
@@ -180,5 +181,12 @@
                 <span class="text-muted">Copyright &copy; 2017 by Picme. All Rights Reserved.</span>
             </div>
         </footer>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"                         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/12.1.5/js/smooth-scroll.min.js"       integrity="sha256-MMt0/21G3z0Zg4ET1kI3HC9npItDowkitRDVr0FhCxA=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"                 integrity="sha256-/GXjBGBWRx8/y1Be190w3hrUOFXNs9qPhthi0tbNnG8=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"                      integrity="sha256-gL1ibrbVcRIHKlCO5OXOPC/lZz/gpdApgQAzskqqXp8=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha256-GIa8Vh3sfESnVB2CN3rYGkD/MklvMq0lmITweQxE1qU=" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
