Add send button to contact form

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                             </div>
                         </div>
                     </div>
+                    <button class="btn btn-secondary" type="submit">Send</button>
                 </form>
             </div>
         </section>
