--- a/index.html
+++ b/index.html
@@ -114,33 +114,38 @@
 
                 <div class="row justify-content-center">
                     <div class="team-member col-md-4">
-                        <h2>Maxim Melkonian</h2>
-                        <img src="max.jpg" width="200" height="200">
-                        <p>Description of Maxim and his abilities</p>
+                        <h2 class="name">Maxim Melkonian</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Title</p>
+                        <p class="description">Description of Maxim and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
-                        <h2>Randy Labrecque</h2>
-                        <img src="randy.jpg" width="200" height="200">
-                        <p>Description of Randy and his abilities</p>
+                        <h2 class="name">Randy Labrecque</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Title</p>
+                        <p class="description">Description of Randy and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
-                        <h2>Maulik Shah</h2>
-                        <img src="maulik.jpg" width="200" height="200">
-                        <p>Description of Maulik and his abilities</p>
+                        <h2 class="name">Maulik Shah</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Title</p>
+                        <p class="description">Description of Maulik and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
-                        <h2>Nicolas Gnyra</h2>
-                        <img src="nicolas.jpg" width="200" height="200">
-                        <p>Description of Nicolas and his abilities</p>
+                        <h2 class="name">Nicolas Gnyra</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Title</p>
+                        <p class="description">Description of Nicolas and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
-                        <h2>Hady El-Saleh</h2>
-                        <img src="Hady.jpg" width="200" height="200">
-                        <p>Description of Hady and his abilities</p>
+                        <h2 class="name">Hady El-Saleh</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Title</p>
+                        <p class="description">Description of Hady and his abilities</p>
                     </div>
                 </div>
             </div>
