Change footer background color

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 
         <footer class="footer">
             <div class="container text-right">
-                <span class="text-muted">Copyright &copy; 2017 Picme. All Rights Reserved.</span>
+                Copyright &copy; 2017 Picme. All Rights Reserved.
             </div>
         </footer>
 
