--- a/index.html
+++ b/index.html
@@ -117,35 +117,35 @@
                         <h2 class="name">Maxim Melkonian</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
-                        <p style="border:6px solid rgb(0, 0, 0)" class="description">Description of Maxim and his abilities</p>
+                        <p class="description">Description of Maxim and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
                         <h2 class="name">Randy Labrecque</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
-                        <p style="border:6px solid rgb(0, 0, 0)" class="description">Description of Randy and his abilities</p>
+                        <p class="description">Description of Randy and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
                         <h2 class="name">Maulik Shah</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
-                        <p style="border:6px solid rgb(0, 0, 0)" class="description">Description of Maulik and his abilities</p>
+                        <p class="description">Description of Maulik and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
                         <h2 class="name">Nicolas Gnyra</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
-                        <p style="border:6px solid rgb(0, 0, 0)" class="description">Description of Nicolas and his abilities</p>
+                        <p class="description">Description of Nicolas and his abilities</p>
                     </div>
 
                     <div class="team-member col-md-4">
                         <h2 class="name">Hady El-Saleh</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
-                        <p style="border:6px solid rgb(0, 0, 0)" class="description">Description of Hady and his abilities</p>
+                        <p class="description">Description of Hady and his abilities</p>
                     </div>
                 </div>
             </div>
