--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="container overlay">
                     <h1>Pic the best photographer for the best moment</h1>
-                    <p class="lead">Wherever you are, Picme is right there</p>
+                    <p class="lead">Wherever you are, Picme is right there.</p>
 
                     <p>
                         <a class="btn btn-primary btn-lg" href="#">Get the app</a>
