--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="video-background">
                 <div class="background">
                     <video playsinline autoplay muted loop poster="img/tbd.jpg">
-                        <source src="video/temp.mp4" type="video/mp4">
+                        <source src="video/Picme_webVid.m2ts" type="video/m2ts">
                     </video>
                 </div>
                 <div class="container overlay">
