Compress background video & fix URL

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <section id="home">
             <div class="video-background">
                 <div class="background">
-                    <video playsinline autoplay muted loop poster="img/tbd.jpg">
-                        <source src="video/Picme_webvid.mp4" type="video/mp4">
+                    <video playsinline autoplay muted loop poster="img/bg.jpg">
+                        <source src="video/bg.webm" type="video/webm">
+                        <source src="video/bg.mp4" type="video/mp4">
+                        Your browser does not support videos.
                     </video>
                 </div>
                 <div class="container overlay">
