--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                     <p class="lead">Wherever you are, Picme is right there.</p>
 
                     <p>
-                        <a class="btn btn-primary btn-lg" href="#">Get the app</a>
-                        <a class="btn btn-success btn-lg" href="#">Sign up</a>
+                    <a href="#bottom" class="cta-button" style="text-align:center !important;">Get the app</a> <!-- Call To Action Button -->
+                    <a href="#bottom" class="cta-button" style="text-align:center !important;">Get the app</a> <!-- Call To Action Button -->
+                    </div>
                     </p>
                 </div>
             </div>
