Change btn-primary to match website colors

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <p class="lead">Wherever you are, Picme is right there.</p>
 
                     <p>
-                    <a href="#bottom" class="cta-button" style="text-align:center !important;">Get the app</a> <!-- Call To Action Button -->
-                    <a href="#bottom" class="cta-button" style="text-align:center !important;">Get the app</a> <!-- Call To Action Button -->
+                        <a href="#" class="btn btn-primary btn-lg">Get the app</a>
+                        <a href="#" class="btn btn-secondary btn-lg">Sign up</a>
                     </div>
                     </p>
                 </div>
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-secondary" type="submit">Send</button>
+                    <button class="btn btn-primary" type="submit">Send</button>
                 </form>
             </div>
         </section>
