Improve header styles a bit

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section id="features">
             <div class="container">
                 <h1>Features</h1>
-                <p>Picme is a service that allows people to get in contact with a photographer near their area for a quick photoshoot.</p>
+                <p class="lead">Picme is a service that allows people to get in contact with a photographer near their area for a quick photoshoot.</p>
                 <div class="row">
                     <div class="feature col-md-4 wow fadeIn">
                         <div class="icon"><img src="img/camera-retro.svg"/></div>
@@ -120,35 +120,35 @@
                 <h1>Team</h1>
 
                 <div class="row justify-content-center">
-                    <div class="team-member col-md-4">
+                    <div class="team-member col-md-4 wow fadeInRight">
                         <h2 class="name">Maxim Melkonian</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
                         <p class="description">Description of Maxim and his abilities</p>
                     </div>
 
-                    <div class="team-member col-md-4">
+                    <div class="team-member col-md-4 wow fadeInRight delay-200">
                         <h2 class="name">Randy Labrecque</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
                         <p class="description">Description of Randy and his abilities</p>
                     </div>
 
-                    <div class="team-member col-md-4">
+                    <div class="team-member col-md-4 wow fadeInRight delay-400">
                         <h2 class="name">Maulik Shah</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
                         <p class="description">Description of Maulik and his abilities</p>
                     </div>
 
-                    <div class="team-member col-md-4">
+                    <div class="team-member col-md-4 wow fadeInRight delay-600">
                         <h2 class="name">Nicolas Gnyra</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
                         <p class="description">Description of Nicolas and his abilities</p>
                     </div>
 
-                    <div class="team-member col-md-4">
+                    <div class="team-member col-md-4 wow fadeInRight delay-800">
                         <h2 class="name">Hady El-Saleh</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
                         <p class="title">Title</p>
@@ -161,6 +161,7 @@
         <section id="contact">
             <div class="container">
                 <h1>Contact</h1>
+                <p class="lead">Have a burning question you want to ask us? Send us a message!</p>
                 <form>
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4">
