Add preliminary titles & descriptions

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
                 <h1>Features</h1>
                 <p class="lead">Picme is a service that allows people to get in contact with a photographer near their area for a quick photoshoot.</p>
                 <div class="row">
-                    <div class="feature col-md-4 wow fadeIn">
+                    <div class="feature col-md-4 wow fadeInLeft">
                         <div class="icon"><img src="img/camera-retro.svg"/></div>
                         <p>You have the option of selecting a professional photographer with an already established studio or an enthusiast who’s just starting out.</p>
                     </div>
 
-                    <div class="feature col-md-4 wow fadeIn delay-200">
+                    <div class="feature col-md-4 wow fadeInLeft delay-200">
                         <div class="icon"><img src="img/mobile-alt.svg"/></div>
                         <p>Using the mobile app, you locate and choose a photograph signed up with the service and have them get to their location in a few minutes.</p>
                     </div>
 
-                    <div class="feature col-md-4 wow fadeIn delay-400">
+                    <div class="feature col-md-4 wow fadeInLeft delay-400">
                         <div class="icon"><img src="img/paper-plane.svg"/></div>
                         <p>After the shoot, the photographer sends you the pictures through the Picme app.<p>
                     </div>
@@ -118,41 +118,63 @@
         <section id="team">
             <div class="container">
                 <h1>Team</h1>
-
+                <!-- TODO: put descriptions in hover-only container thing -->
                 <div class="row justify-content-center">
+                    <div class="team-member col-md-4 wow fadeInRight">
+                        <h2 class="name">Hady El-Saleh</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">CEO</p>
+                        <p class="description">
+                            Hadi is a businessman at heart. He is always thinking of how to push our service to the next
+                            level and how to better market our product to the right people. His entrepreneurial mindset
+                            helps us get our project off ground and into more possibilities in the future.
+                        </p>
+                    </div>
+
+                    <div class="team-member col-md-4 wow fadeInRight delay-200">
+                        <h2 class="name">Maulik Shah</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Founder</p>
+                        <p class="description">
+                            For Nicolas, coding is a way of life. Once he gets his mind on a project, he obsesses over
+                            it. Nicolas has a great knowledge of coding and considerate programing experience already
+                            under his belt. He makes our project possible through his meticulous programing skills.
+                        </p>
+                    </div>
+
+                    <div class="team-member col-md-4 wow fadeInRight delay-400">
+                        <h2 class="name">Nicolas Gnyra</h2>
+                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <p class="title">Lead Developer</p>
+                        <p class="description">
+                            Maulik is the founder and the all-rounder. He was the one to come up with the idea and
+                            elaborate it to the team when we were struggling. He dabbles in every facet of the project.
+                            His diverse skills are a key asset to team and make him a member we can rely on to do pretty
+                            much anything.
+                        </p>
+                    </div>
+
                     <div class="team-member col-md-4 wow fadeInRight">
                         <h2 class="name">Maxim Melkonian</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
-                        <p class="title">Title</p>
-                        <p class="description">Description of Maxim and his abilities</p>
+                        <p class="title">Graphic Designer</p>
+                        <p class="description">
+                            Maxim knows how to make something eye catching and clean at the same time. An artstyle that
+                            really compliments our service. His expertise in the graphic department helps us to make our
+                            product not only appealing but practical for the users.
+                        </p>
                     </div>
 
                     <div class="team-member col-md-4 wow fadeInRight delay-200">
                         <h2 class="name">Randy Labrecque</h2>
                         <img class="portrait" src="http://via.placeholder.com/150x150">
-                        <p class="title">Title</p>
-                        <p class="description">Description of Randy and his abilities</p>
-                    </div>
-
-                    <div class="team-member col-md-4 wow fadeInRight delay-400">
-                        <h2 class="name">Maulik Shah</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
-                        <p class="title">Title</p>
-                        <p class="description">Description of Maulik and his abilities</p>
-                    </div>
-
-                    <div class="team-member col-md-4 wow fadeInRight delay-600">
-                        <h2 class="name">Nicolas Gnyra</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
-                        <p class="title">Title</p>
-                        <p class="description">Description of Nicolas and his abilities</p>
-                    </div>
-
-                    <div class="team-member col-md-4 wow fadeInRight delay-800">
-                        <h2 class="name">Hady El-Saleh</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
-                        <p class="title">Title</p>
-                        <p class="description">Description of Hady and his abilities</p>
+                        <p class="title">Team Manager & Project Director</p>
+                        <p class="description">
+                            Randy is the man with the vision. He makes sure the team are all on the page about project
+                            and that this is the best direction to take it. His analytical thinking of how someone would
+                            want to use the product and what they would get out of it is a great perk in helping produce
+                            the best possible experience for our users.
+                        </p>
                     </div>
                 </div>
             </div>
