--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="row justify-content-center">
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Hady El-Saleh</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <img class="portrait" src="img/profiles/helsa.jpg">
                         <p class="title">CEO</p>
                         <p class="description">
                             Hadi is a businessman at heart. He is always thinking of how to push our service to the next
@@ -136,7 +136,7 @@
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Maulik Shah</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <img class="portrait" src="img/profiles/mshah.jpg">
                         <p class="title">Founder</p>
                         <p class="description">
                             Maulik is the founder and the all-rounder. He was the one to come up with the idea and
@@ -148,7 +148,7 @@
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Nicolas Gnyra</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <img class="portrait" src="img/profiles/ngnyr.jpg">
                         <p class="title">Lead Developer</p>
                         <p class="description">
                             For Nicolas, coding is a way of life. Once he gets his mind on a project, he obsesses over
@@ -159,7 +159,7 @@
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Maxim Melkonian</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <img class="portrait" src="img/profiles/mmelk.jpg">
                         <p class="title">Graphic Designer</p>
                         <p class="description">
                             Maxim knows how to make something eye catching and clean at the same time. An artstyle that
@@ -170,7 +170,7 @@
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Randy Labrecque</h2>
-                        <img class="portrait" src="http://via.placeholder.com/150x150">
+                        <img class="portrait" src="img/profiles/rlabr.jpg">
                         <p class="title">Team Manager & Project Director</p>
                         <p class="description">
                             Randy is the man with the vision. He makes sure the team are all on the page about project
