Add scrollreveal to contact form

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="container">
                 <h1>Contact</h1>
                 <p class="lead">Have a burning question you want to ask us? Send us a message!</p>
-                <form>
+                <form class="scrollreveal" data-animation-name="fadeIn">
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="form-group">
