--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
         <title>Picme</title>
 
+        <link rel="icon" href="favicon.png"/>
+
         <!-- modernizr stays on top to properly detect features -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
 
