--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     </video>
                 </div>
                 <div class="container overlay">
-                    <h1>Pick the best photographer for the best moment</h1>
-                    <p class="lead">Wherever you are, Picme is right there.</p>
+                    <h1 id="home-slogan" class="animated fadeInUp">Pick the best photographer for the best moment</h1>
+                    <p id="home-lead" class="lead animated fadeInUp">Wherever you are, Picme is right there.</p>
 
-                    <p>
+                    <div id="home-buttons" class="animated fadeIn">
                         <a href="#" class="btn btn-primary btn-lg">Get the app</a>
                         <a href="#" class="btn btn-secondary btn-lg">Sign up</a>
-                    </p>
+                    </div>
                 </div>
             </div>
         </section>
