Adding Hovering Feature

--- a/index.html
+++ b/index.html
@@ -130,13 +130,17 @@
                 <div class="row justify-content-center">
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Hady El-Saleh</h2>
-                        <img class="portrait" src="img/profiles/helsa.jpg">
-                        <p class="title">CEO</p>
-                        <p class="description">
+                        <div class="container">
+                            <img class="portrait" src="img/profiles/helsa.jpg">
+                            <div class="overlay">
+                                <p class="title">CEO</p>
+                                <p class="description">
                             Hadi is a businessman at heart. He is always thinking of how to push our service to the next
                             level and how to better market our product to the right people. His entrepreneurial mindset
                             helps us get our project off ground and into more possibilities in the future.
-                        </p>
+                                </p>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
