--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <img class="portrait" src="img/profiles/helsa.jpg">
                             <div class="overlay">
                                 <p class="title">CEO</p>
-                                <p class="description">
+                                <p class="text">
                             Hadi is a businessman at heart. He is always thinking of how to push our service to the next
                             level and how to better market our product to the right people. His entrepreneurial mindset
                             helps us get our project off ground and into more possibilities in the future.
