--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h1>Team</h1>
                 <!-- TODO: put descriptions in hover-only container thing -->
                 <div class="row justify-content-center">
-                    <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
+                    <!--<div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">-->
                         <h2 class="name">Hady El-Saleh</h2>
                         <div class="container">
                             <img class="portrait" src="img/profiles/helsa.jpg">
@@ -141,7 +141,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
+                    <!--</div>-->
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Maulik Shah</h2>
