--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
                 <h1>Team</h1>
                 <!-- TODO: put descriptions in hover-only container thing -->
                 <div class="row justify-content-center">
-                    <!--<div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">-->
+                    <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Hady El-Saleh</h2>
                         <div class="container">
                             <img class="portrait" src="img/profiles/helsa.jpg">
                             <div class="overlay">
-                                <p class="title">CEO</p>
-                                <p class="text">
+                                <!--<p class="title">CEO</p>-->
+                                <div class="text">
                             Hadi is a businessman at heart. He is always thinking of how to push our service to the next
                             level and how to better market our product to the right people. His entrepreneurial mindset
                             helps us get our project off ground and into more possibilities in the future.
-                                </p>
+                                </div>
                             </div>
                         </div>
-                    <!--</div>-->
+                    </div>
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Maulik Shah</h2>
