--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div class="container">
                             <img class="portrait" src="img/profiles/helsa.jpg">
                             <div class="overlay">
-                                <!--<p class="title">CEO</p>-->
+                                <p class="title">CEO</p>
                                 <div class="text">
                             Hadi is a businessman at heart. He is always thinking of how to push our service to the next
                             level and how to better market our product to the right people. His entrepreneurial mindset
