--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="row justify-content-center">
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Hady El-Saleh</h2>
-                        <div class="container">
+                        <div class="cont2">
                             <img class="portrait" src="img/profiles/helsa.jpg">
                             <div class="overlay">
                                 <p class="title">CEO</p>
