--- a/index.html
+++ b/index.html
@@ -145,48 +145,64 @@
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Maulik Shah</h2>
-                        <img class="portrait" src="img/profiles/mshah.jpg">
-                        <p class="title">Founder</p>
-                        <p class="description">
-                            Maulik is the founder and the all-rounder. He was the one to come up with the idea and
-                            elaborate it to the team when we were struggling. He dabbles in every facet of the project.
-                            His diverse skills are a key asset to team and make him a member we can rely on to do pretty
-                            much anything.
-                        </p>
+                        <div class="cont2">
+                            <img class="portrait" src="img/profiles/mshah.jpg">
+                            <div class="overlay">
+                                <p class="title">Founder</p>
+                                <div class="text">
+                                    Maulik is the founder and the all-rounder. He was the one to come up with the idea and
+                                    elaborate it to the team when we were struggling. He dabbles in every facet of the project.
+                                    His diverse skills are a key asset to team and make him a member we can rely on to do pretty
+                                    much anything.
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Nicolas Gnyra</h2>
-                        <img class="portrait" src="img/profiles/ngnyr.jpg">
-                        <p class="title">Lead Developer</p>
-                        <p class="description">
-                            For Nicolas, coding is a way of life. Once he gets his mind on a project, he obsesses over
-                            it. Nicolas has a great knowledge of coding and considerate programing experience already
-                            under his belt. He makes our project possible through his meticulous programing skills.
-                        </p>
+                        <div class="cont2">
+                            <img class="portrait" src="img/profiles/ngnyr.jpg">
+                            <div class="overlay">
+                                <p class="title">Lead Developer</p>
+                                <div class="text">
+                                    For Nicolas, coding is a way of life. Once he gets his mind on a project, he obsesses over
+                                    it. Nicolas has a great knowledge of coding and considerate programing experience already
+                                    under his belt. He makes our project possible through his meticulous programing skills.
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Maxim Melkonian</h2>
-                        <img class="portrait" src="img/profiles/mmelk.jpg">
-                        <p class="title">Graphic Designer</p>
-                        <p class="description">
-                            Maxim knows how to make something eye catching and clean at the same time. An artstyle that
-                            really compliments our service. His expertise in the graphic department helps us to make our
-                            product not only appealing but practical for the users.
-                        </p>
+                        <div class="cont2">
+                            <img class="portrait" src="img/profiles/mmelk.jpg">
+                            <div class="overlay">
+                                <p class="title">Graphic Designer</p>
+                                <div class="text">
+                                    Maxim knows how to make something eye catching and clean at the same time. An artstyle that
+                                    really compliments our service. His expertise in the graphic department helps us to make our
+                                    product not only appealing but practical for the users.
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="team-member col-md-4 scrollreveal" data-animation-name="fadeInRight">
                         <h2 class="name">Randy Labrecque</h2>
-                        <img class="portrait" src="img/profiles/rlabr.jpg">
-                        <p class="title">Team Manager & Project Director</p>
-                        <p class="description">
-                            Randy is the man with the vision. He makes sure the team are all on the page about project
-                            and that this is the best direction to take it. His analytical thinking of how someone would
-                            want to use the product and what they would get out of it is a great perk in helping produce
-                            the best possible experience for our users.
-                        </p>
+                        <div class="cont2">
+                            <img class="portrait" src="img/profiles/rlabr.jpg">
+                            <div class="overlay">
+                                <p class="title">Team Manager & Project Manager</p>
+                                <div class="text">
+                                    Randy is the man with the vision. He makes sure the team are all on the page about project
+                                    and that this is the best direction to take it. His analytical thinking of how someone would
+                                    want to use the product and what they would get out of it is a great perk in helping produce
+                                    the best possible experience for our users.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
