Add chevron to bottom of home screen

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                         <a href="#" class="btn btn-secondary btn-lg">Sign up</a>
                     </p>
                 </div>
+                <a class="bottom-button" href="#features">
+                    <img class="chevron" src="img/chevron-down.svg"/>
+                </a>
             </div>
         </section>
 
