--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="#" class="btn btn-secondary btn-lg">Sign up</a>
                     </div>
                 </div>
-                <a class="bottom-button" href="#features">
+                <a id="home-bottom-button" class="bottom-button animated fadeIn" href="#features">
                     <img class="chevron" src="img/chevron-down.svg"/>
                 </a>
             </div>
