--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <div class="cont2">
                             <img class="portrait" src="img/profiles/rlabr.jpg">
                             <div class="overlay">
-                                <p class="title">Team Manager & Project Manager</p>
+                                <p class="title">Team & Project Manager</p>
                                 <div class="text">
                                     Randy is the man with the vision. He makes sure the team are all on the page about project
                                     and that this is the best direction to take it. His analytical thinking of how someone would
